@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-08T08:11:57Z",
-  "count" : 66,
-  "count_minmax" : [ 0, 66 ],
+  "timestamp" : "2022-05-09T00:48:03Z",
+  "count" : 67,
+  "count_minmax" : [ 0, 67 ],
   "count_prev_day_inc" : 68,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
