@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-08T08:11:57Z",
+  "timestamp" : "2022-05-09T00:48:03Z",
   "count_outdated" : 8,
   "uniques_outdated" : 2,
-  "count" : 198,
+  "count" : 199,
   "uniques" : 10,
   "views" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 66,
-      "count_minmax": [ 0, 66 ],
+      "count": 67,
+      "count_minmax": [ 0, 67 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
