@@ -1,5 +1,5 @@
 {
-  "count": 190,
+  "count": 191,
   "uniques": 1,
   "views": [
     {
@@ -39,7 +39,7 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 66,
+      "count": 67,
       "uniques": 1
     }
   ]
